; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_ppa.c_epp_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_ppa.c_epp_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i16)* @epp_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @epp_reset(i16 zeroext %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca i32, align 4
  store i16 %0, i16* %2, align 2
  %4 = load i16, i16* %2, align 2
  %5 = call i32 @r_str(i16 zeroext %4)
  store i32 %5, i32* %3, align 4
  %6 = load i16, i16* %2, align 2
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @w_str(i16 zeroext %6, i32 %7)
  %9 = load i16, i16* %2, align 2
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 254
  %12 = call i32 @w_str(i16 zeroext %9, i32 %11)
  ret void
}

declare dso_local i32 @r_str(i16 zeroext) #1

declare dso_local i32 @w_str(i16 zeroext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
